Korjattu RaceModen luonti. RaceHorseHistoryParserissa ajolÄhdön tyyppi luetaan nyt suoraan kannan TYYPPI kentästä eikä ajasta.